--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -63,6 +63,10 @@ input {
   border-radius: 4px;
 }
 
+.btn-wrapper {
+  max-width: 200px;
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
