--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -66,7 +66,7 @@
 
 body {
   color: var(--color-text);
-  background: var(--color-background);
+  /* background: var(--color-background); */
   transition:
     color 0.5s,
     background-color 0.5s;
